--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     </div>
 </div>
 
+<div class='map-overlay'></div>
+
 <script>
     //Mapbox Access Token
     mapboxgl.accessToken = 'pk.eyJ1IjoiZGdnYWxscyIsImEiOiJjam5kODhhODY1d2g5M3huMTN5ZTluOGRhIn0.T10MzeopQu-_6mXyp_zq_A';
@@ -62,88 +64,94 @@
 
 
     var expression = ["match", ["get", "STATE"]];
+    var expression2 = ["match", ["get", "COUNTY"]];
     var initialData = [];
-    var csvData;
+    var initialData2 = [];
+
+    var stateCsvData;
+    var zipCsvData;
+    var currentLayer = 'states';
+
     var datasetPosition = 1;
 
-    //Read CSV
+    // Read CSV
     $(document).ready(function() {
         $.ajax({
             type: "GET",
             url: "./AMStates.csv",
             dataType: "text",
             success: function(data) {
-                getCSVFloatColumnData('Y1', data, initialData);
-                assignVectorColours(initialData, expression);
-                loadLayer();
-                csvData = data;
+                getCSVFloatColumnData('Y1', data, initialData, "State");
+                assignVectorColours(initialData, expression, "STATE");
+                stateCsvData = data;
             }
         });
     });
 
+    $(document).ready(function() {
+        $.ajax({
+            type: "GET",
+            url: "./AMCounties.csv",
+            dataType: "text",
+            success: function(data) {
+                getCSVFloatColumnData('Y1', data, initialData2, "State");
+                assignVectorColours(initialData2, expression2, "STATE");
+                zipCsvData = data;
+                loadLayer();
+            }
+        });
+    });
+
+    console.log(initialData2);
+
     //Functiionality for switching layer style
     var layerList = document.getElementById('menu');
     var inputs = layerList.getElementsByTagName('input');
-
-    function switchLayer(input) {
-
-        var data = [];
-        var expression = ["match", ["get", "STATE"]];
-
-        getCSVFloatColumnData(input.target.id, csvData, data);
-        assignVectorColours(data, expression);
-
-        map.setPaintProperty('states-join', 'fill-color', expression);
-        datasetPosition = input.target.value;
-    }
 
     for (var i = 0; i < inputs.length; i++) {
         inputs[i].onclick = switchLayer;
     }
 
 
+    map.on('zoom', function() {
+        if(map.getZoom() > 6 && map.getLayer('states-join').visibility === 'visible') {
+            map.setLayoutProperty('states-join', 'visibility', 'none')
+            map.setLayoutProperty('zip-join', 'visibility', 'visible')
+            currentLayer = 'counties'
+        } else if (map.getZoom() < 7 && map.getLayer('states-join').visibility === 'none'){
+            map.setLayoutProperty('states-join', 'visibility', 'visible')
+            map.setLayoutProperty('zip-join', 'visibility', 'none')
+            currentLayer = 'states'
+        }
+    });
 
     var tempData2 = [];
-
 
 
 
     //Functionality for when a user clicks on a registered location
     map.on('click', function(e) {
 
-        var features = map.queryRenderedFeatures(e.point, {
-            layers: ['states-join']
-        });
+        var chartColumns = ['Y1', 'Y2', 'Y3', 'Y4', 'Y5'];
+        csvColumnData = [];
+        tempData2 = [];
+
+        if(currentLayer === 'states') {
+            var features = map.queryRenderedFeatures(e.point, {
+                layers: ['states-join'] });
+        } else {
+            var features = map.queryRenderedFeatures(e.point, {
+                layers: ['zip-join'] });
+        }
 
         if (!features.length) {
             return;
         }
-
         var feature = features[0];
 
-        csvColumnData = [];
-        tempData2 = [];
+        console.log(feature);
 
-        var chartColumns = ['Y1', 'Y2', 'Y3', 'Y4', 'Y5'];
-        var chartIndexes = ['Year 1', 'Year 2', 'Year 3', 'Year 4', 'Year 5'];
-
-        getChartData(chartColumns, csvData, tempData2, feature.properties.STATE);
-
-        //Popup function
-        var popup = new mapboxgl.Popup({ offset: [0, -15] })
-            .setLngLat(e.lngLat)
-
-            .setHTML('<img src="img/Mastercard.png" style="width=140px; height:50px; margin:auto;"><br>' +
-                '<table>' +
-                '<tr><th><h3>Location</h3></th>' +
-                '<th><h3>Value</h3></th></tr>' +
-                '<tr><td><h3>' + feature.properties.NAME + '</h3></td>' +
-                '<td><h3>$' + tempData2[datasetPosition-1] + '</h3></td></tr></table>').addTo(map);
-
-
-        generateChart(chartColumns, tempData2)
-
-
+        generatePopup(chartColumns, feature, feature.properties.NAME, e);
     });
 
 
