--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css' rel='stylesheet' />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="./scripts/mapScripts.js"></script>
+    <script src="./scripts/layers.js"></script>
     <script src="./scripts/chartScripts.js"></script>
     <script src="./scripts/generalScripts.js"></script>
     <script src="./scripts/maps.js"></script>
@@ -62,10 +63,6 @@
     <hr>
 </div>
 
-<div class="map-overlay" style="text-align:center;">
-    <div id="timeline"></div>
-</div>
-
 <div class="map-overlay" id="filter">
     <p style="font-weight:bold;text-align:center;font-family: 'Trebuchet MS';">Filter Data</p><hr>
     <p><input type="text" id="amount" readonly style="font-size:11px;border:0;color:#f6931f; font-weight:bold;padding:0px;"></p>
@@ -76,7 +73,7 @@
 
 <script>
     //Mapbox Access Token
-    mapboxgl.accessToken = 'pk.eyJ1IjoiZGdnYWxscyIsImEiOiJjam5kODhhODY1d2g5M3huMTN5ZTluOGRhIn0.T10MzeopQu-_6mXyp_zq_A';
+    mapboxgl.accessToken = 'pk.eyJ1IjoiYXBpcGlsb3RzIiwiYSI6ImNqbm9tMHVwZjJqMm4zcG9qaXBkaDBleDkifQ.Dk2nqXUq2eKTEsUeNpS90g';
 
     //Coordinates for flyTo method which takes you to a location (triggered when layering is changed)
     const amCoords = [-8.268010340029832, 53.49660773012667];
@@ -84,20 +81,20 @@
     //Initialise Map
     var map = new mapboxgl.Map({
         container: 'map', // container id
-        style: 'mapbox://styles/dggalls/cjnekqlzr1x622rnu4kpc6ml2',
+        style: 'mapbox://styles/apipilots/cjnx04jsa74w22ste4l56zt81',
         center: [-74.50, 40], // starting position
-        zoom: 4.1141377379312125 // starting zoom
+        zoom: 3 // starting zoom
     });
 
 
-    var expression = ["match", ["get", "STATE"]];
+    var expression = ["match", ["get", "STATE_CODE"]];
     var expression2 = ["match", ["get", "COUNTY"]];
     var initialData = [];
     var initialData2 = [];
 
     var stateCsvData;
     var countyCsvData;
-    var currentLayer = 'states';
+    var currentLayer = 'Outline';
 
     // Read CSV
     $(document).ready(function() {
@@ -107,7 +104,7 @@
             dataType: "text",
             success: function(data) {
                 initialData = getCSVFloatColumnData('Y1', data, "State");
-                assignVectorColours(initialData, expression, "STATE", 'states');
+                assignVectorColours(initialData, expression, "STATE", 'States');
                 stateCsvData = data;
             }
         });
@@ -135,31 +132,9 @@
         inputs[i].onclick = switchLayer;
     }
 
-    map.on('zoom', function() {
-        var chartName = document.getElementById("chart-name");
-
-        if(map.getZoom() >= 7 && map.getLayer('states').visibility === 'visible') {
-            map.setLayoutProperty('states', 'visibility', 'none');
-            map.setLayoutProperty('counties', 'visibility', 'visible');
-            currentLayer = 'counties';
-
-            var legendDiv = document.getElementById('legend');
-            legendDiv.innerHTML = '';
-            addLegend('counties');
-
-        } else if (map.getZoom() < 7 && map.getLayer('states').visibility === 'none'){
-            map.setLayoutProperty('states', 'visibility', 'visible');
-            map.setLayoutProperty('counties', 'visibility', 'none');
-            currentLayer = 'states';
-
-            addLegend('states');
-        }
-    });
-
     var tempData2 = [];
 
     var chartColumns = ['Y1', 'Y2', 'Y3', 'Y4', 'Y5'];
-    var layerId;
     var filters = [];
 
     //Functionality for when a user clicks on a registered location
@@ -169,14 +144,7 @@
         csvColumnData = [];
         tempData2 = [];
 
-
-        if(currentLayer === 'states') {
-            var features = map.queryRenderedFeatures(e.point, { layers: ['states'] });
-            layerId = 'states';
-        } else {
-            var features = map.queryRenderedFeatures(e.point, { layers: ['counties'] });
-            layerId = 'counties';
-        }
+        var features = map.queryRenderedFeatures(e.point, { layers: [currentLayer] });
 
         if (!features.length) {
             return;
@@ -185,7 +153,14 @@
 
         console.log(feature);
 
-        generatePopup(chartColumns, feature, feature.properties.NAME, e);
+
+        if(currentLayer === 'States' || currentLayer === 'Counties') {
+            generatePopup(chartColumns, feature, feature.properties.NAME, e);
+        } else if(currentLayer === 'Cities') {
+            generatePopup(chartColumns, feature, feature.properties.city, e);
+        } else {
+            generatePopup(chartColumns, feature, feature.properties.name, e);
+        }
     });
 
 
