--- a/index.html
+++ b/index.html
@@ -86,15 +86,24 @@
         zoom: 3 // starting zoom
     });
 
+    function convertArrayOfObjectsToCSV(args) {
+
+    }
+
 
     var expression = ["match", ["get", "STATE_CODE"]];
     var expression2 = ["match", ["get", "COUNTY"]];
     var initialData = [];
     var initialData2 = [];
+    var initialData3 = [];
 
     var stateCsvData;
     var countyCsvData;
+    var cityCsvData;
     var currentLayer = 'Outline';
+    var cityData = [];
+    var filteredCityData = [];
+    var filteredCityData2 = [];
 
     // Read CSV
     $(document).ready(function() {
@@ -124,6 +133,39 @@
         });
     });
 
+    $(document).ready(function() {
+        $.ajax({
+            type: "GET",
+            url: "./csv/SPGeo.csv",
+            dataType: "text",
+            success: function(data) {
+                initialData3 = getCSVFloatColumnData("SP_CITY_NAME_CLEAN", data, "ZIP5");
+            }
+        });
+    });
+
+
+
+    function CSV(array) {
+        // Use first element to choose the keys and the order
+        var keys = Object.keys(array[0]);
+
+        // Build header
+        var result = keys.join(",") + "\n";
+
+        // Add the rows
+        array.forEach(function(obj){
+            keys.forEach(function(k, ix){
+                if (ix) result += ",";
+                result += obj[k];
+            });
+            result += "\n";
+        });
+
+        return result;
+    }
+
+
     //Functiionality for switching layer style
     var layerList = document.getElementById('menu');
     var inputs = layerList.getElementsByTagName('input');
@@ -135,8 +177,48 @@
     var chartColumns = ['Y1', 'Y2', 'Y3', 'Y4', 'Y5'];
     var filters = [];
 
+
+    var obj = {};
+    var result;
+
     //Functionality for when a user clicks on a registered location
     map.on('click', function(e) {
+
+        filteredCityData = [];
+
+        cityData = map.queryRenderedFeatures({ layers: ['Cities'] });
+
+        cityData.forEach(function (row) {
+            var obj = {};
+            obj['Name'] = row.properties.city.toUpperCase();
+            obj['Value'] = row.properties.cartodb_id;
+            filteredCityData.push(obj);
+        });
+
+        console.log(filteredCityData);
+        console.log(initialData3);
+
+        initialData3.forEach(function (row) {
+            var obj = {};
+
+            let filtObj = filteredCityData.find(o => o.Name === row.Place);
+
+            if(filtObj === undefined) {
+                obj['Value'] = 'none';
+
+            } else {
+                obj['Value'] = filtObj.Value.toString();
+            }
+
+            filters.push(obj);
+        });
+
+        result = CSV(filters);
+        // console.log(result);
+        console.log(result);
+
+
+
 
         csvColumnData = [];
         tempData2 = [];
@@ -148,8 +230,6 @@
         }
         var feature = features[0];
 
-        console.log(feature);
-
         if(currentLayer === 'States' || currentLayer === 'Counties') {
             generatePopup(chartColumns, feature, feature.properties.NAME, e);
         } else if(currentLayer === 'Cities') {
@@ -157,6 +237,7 @@
         } else {
             generatePopup(chartColumns, feature, feature.properties.name, e);
         }
+
     });
 
 
