--- a/index.html
+++ b/index.html
@@ -90,31 +90,20 @@
 
     }
 
-
-    var expression = ["match", ["get", "STATE_CODE"]];
-    var expression2 = ["match", ["get", "COUNTY"]];
-    var initialData = [];
-    var initialData2 = [];
     var initialData3 = [];
-
-    var stateCsvData;
-    var countyCsvData;
-    var cityCsvData;
+    var initialData4 = [];
     var currentLayer = 'Outline';
     var cityData = [];
     var filteredCityData = [];
     var filteredCityData2 = [];
 
-    // Read CSV
     $(document).ready(function() {
         $.ajax({
             type: "GET",
-            url: "./csv/AMStates.csv",
+            url: "./csv/DBCityDump.csv",
             dataType: "text",
             success: function(data) {
-                initialData = getCSVFloatColumnData('Y1', data, "State");
-                assignVectorColours(initialData, expression, "STATE", 'States');
-                stateCsvData = data;
+                initialData3 = getCSVFloatColumnData("City", data, "ZIP5");
             }
         });
     });
@@ -122,27 +111,15 @@
     $(document).ready(function() {
         $.ajax({
             type: "GET",
-            url: "./csv/AMCounties.csv",
+            url: "./csv/DB2.csv",
             dataType: "text",
             success: function(data) {
-                initialData2 = getCSVFloatColumnData('Y1', data, "State");
-                assignVectorColours(initialData2, expression2, "STATE", 'counties');
-                countyCsvData = data;
+                initialData4 = getCSVFloatColumnData("City", data, "ZIP5");
                 loadLayer();
             }
         });
     });
 
-    $(document).ready(function() {
-        $.ajax({
-            type: "GET",
-            url: "./csv/SPGeo.csv",
-            dataType: "text",
-            success: function(data) {
-                initialData3 = getCSVFloatColumnData("SP_CITY_NAME_CLEAN", data, "ZIP5");
-            }
-        });
-    });
 
 
 
@@ -176,6 +153,7 @@
 
     var chartColumns = ['Y1', 'Y2', 'Y3', 'Y4', 'Y5'];
     var filters = [];
+    var finalResult = [];
 
 
     var obj = {};
@@ -184,10 +162,10 @@
     //Functionality for when a user clicks on a registered location
     map.on('click', function(e) {
 
+
+        //CartoDB Data (Layers)
         filteredCityData = [];
-
         cityData = map.queryRenderedFeatures({ layers: ['Cities'] });
-
         cityData.forEach(function (row) {
             var obj = {};
             obj['Name'] = row.properties.city.toUpperCase();
@@ -195,27 +173,78 @@
             filteredCityData.push(obj);
         });
 
-        console.log(filteredCityData);
-        console.log(initialData3);
-
-        initialData3.forEach(function (row) {
+        var counter = 0;
+        filteredCityData.forEach(function (row) {
             var obj = {};
 
-            let filtObj = filteredCityData.find(o => o.Name === row.Place);
+            let filtObj = initialData3.find(o => o.Place === row.Name);
 
             if(filtObj === undefined) {
+                obj['Name'] = row.Name;
                 obj['Value'] = 'none';
 
             } else {
-                obj['Value'] = filtObj.Value.toString();
+                obj['Name'] = row.Name.toString();
+                obj['Value'] = row.Value.toString();
             }
 
             filters.push(obj);
         });
 
-        result = CSV(filters);
-        // console.log(result);
-        console.log(result);
+        // var filter2 = [];
+        // var counter2 = 0;
+
+        // initialData4.forEach(function(row) {
+        //     var obj = {};
+        //     let filtObj = filters.find(o => o.Name === row.Place);
+        //
+        //     if(filtObj === undefined) {
+        //         counter++;
+        //     } else if(filtObj.Value === 'none') {
+        //         obj['Name'] = filtObj.Name;
+        //         obj['Value'] = filtObj.Value;
+        //         counter2 = counter2+1;
+        //     } else {
+        //         console.log('What Happened');
+        //     }
+        //
+        //     if(obj['Name']) {
+        //         filter2.push(obj);
+        //     }
+        // });
+
+
+        var notFound = [];
+        filters.forEach(function(row){
+            if(row.Value==='none'){
+                notFound.push(row.Name);
+                counter++;
+            }
+        });
+
+        console.log(counter);
+
+
+        // console.log(notFound);
+        // notFound = [];
+        // result = CSV(filters);
+        // var result2 = CSV(filteredCityData);
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
